# masters

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Justfile  Makefile  README.md
.github/workflows/: ci.yml  desktop-build.yml
crates/getmasters-cli/: Cargo.toml
crates/getmasters-cli/src/: main.rs
crates/getmasters-core/: Cargo.toml
crates/getmasters-core/src/: config.rs  error.rs  lib.rs
crates/getmasters-core/src/agent/: mod.rs
crates/getmasters-core/src/assets/: mod.rs  server.rs
crates/getmasters-core/src/extensions/: mod.rs
crates/getmasters-core/src/fincalc/: mod.rs  server.rs
crates/getmasters-core/src/knowledge/: chunk.rs  extract.rs  ingest.rs  mod.rs  server.rs  vector.rs
crates/getmasters-core/src/market/: mod.rs  server.rs
crates/getmasters-core/src/masters/: mentions.rs  mod.rs  router.rs
crates/getmasters-core/src/memory/: mod.rs  server.rs
crates/getmasters-core/src/permission/: approver.rs  audit.rs  grant.rs  mod.rs  policy.rs
crates/getmasters-core/src/prompt/: mod.rs
crates/getmasters-core/src/provider/: anthropic.rs  catalog.rs  factory.rs  mock.rs  mod.rs  openai.rs
crates/getmasters-core/src/revision/: mod.rs
crates/getmasters-core/src/secrets/: mod.rs
crates/getmasters-core/src/simlab/: mod.rs
crates/getmasters-core/src/skills/: mod.rs  server.rs
crates/getmasters-core/src/store/: migrations.rs  mod.rs
crates/getmasters-core/src/study/: mod.rs  server.rs  sm2.rs
crates/getmasters-core/tests/: anthropic_live.rs  knowledge_ingest_search.rs  revert.rs  tool_loop_mock.rs
crates/getmasters-mcp/: Cargo.toml
crates/getmasters-mcp/src/: files.rs  lib.rs
crates/getmasters-mcp/tests/: files_duplex.rs
crates/getmasters-proto/: Cargo.toml
crates/getmasters-proto/src/: dto.rs  lib.rs  perm.rs  ws.rs
crates/getmasters-server/: Cargo.toml
crates/getmasters-server/src/: auth.rs  bundle.rs  catalog.rs  delivery.rs  group.rs  home.rs  install.rs  investing.rs  lib.rs  main.rs  market_fetch.rs  master.rs  master_templates.rs  openapi.rs  recipe.rs  scheduler.rs  simlab.rs  snapshot.rs  state.rs  team.rs
crates/getmasters-server/src/acp/: mod.rs  registry.rs
crates/getmasters-server/src/routes/: acp.rs  bundles.rs  catalog.rs  connectors.rs  group.rs  health.rs  investing.rs  masters.rs  masters_global.rs  messages.rs  mod.rs  projects.rs  recipes.rs  schedules.rs  sessions.rs  settings.rs  sim_ws.rs  simlab.rs  skills_global.rs  snapshot.rs  teams.rs  ws.rs
crates/getmasters-server/tests/: acp_masters.rs  bundles.rs  catalog.rs  connectors.rs  delivery.rs  e2e_approval.rs  e2e_mock.rs  extensions_toggle.rs  group.rs  group_ws.rs  investing.rs  masters.rs  masters_global.rs  memory_skills.rs  openapi_spec.rs  projects_decks.rs  projects_knowledge.rs  projects_study_plan.rs  recipes.rs  scheduler.rs  schedules_api.rs  settings.rs  simlab.rs  teams.rs
docs/: 00-overview.md  01-product-requirements.md  02-architecture.md  03-tech-stack.md  04-extensions-mcp.md  05-data-storage-rag.md  06-security-privacy.md  07-ux-flows.md  08-roadmap.md  09-projects-masters.md  10-ui-design.md  11-investment-agent.md  12-ux-redesign.md
docs/adr/: 0001-backend-language.md  0002-desktop-shell.md  0003-llm-providers.md  0004-vector-store.md  0005-mcp-sdk.md  0006-skills-procedural-memory.md  0007-layered-memory-prompt.md  0008-agent-isolation-parallelism.md  0009-outbound-delivery-surfaces.md  0010-master-team-orchestration.md  0011-project-context-container.md  0012-multi-master-conversation.md  0013-per-master-model.md  0014-external-acp-master-agents.md  0015-vertical-domain-packs.md  0016-asset-lifecycle-storage.md  0017-market-data-supply.md  0018-provider-vision.md  README.md
scripts/: dev-web.sh
ui/desktop/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
ui/desktop/src/: App.tsx  index.css  main.tsx
ui/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
ui/desktop/src-tauri/capabilities/: default.json
ui/desktop/src-tauri/icons/: icon.icns
ui/desktop/src-tauri/src/: main.rs
ui/desktop/src/api/: client.ts  schema.ts
ui/desktop/src/components/: AskHome.tsx  Briefings.tsx  Chat.tsx  Connectors.tsx  GroupChat.tsx  Lab.tsx  Masters.tsx  MastersHub.tsx  Memory.tsx  Onboarding.tsx  ProjectDetail.tsx  Projects.tsx  Recipes.tsx  Routines.tsx  Settings.tsx  Sidebar.tsx  SimLab.tsx  Skills.tsx  Study.tsx  Teams.tsx  Watch.tsx
ui/desktop/src/components/ui/: Badge.tsx  Brand.tsx  Button.tsx  Card.tsx  Composer.tsx  IconButton.tsx  Input.tsx  Markdown.tsx  Select.tsx  Textarea.tsx  ToolStep.tsx  cn.ts  index.ts
ui/desktop/src/lib/: clipboard.ts  daemon.ts  i18n.ts  masters.ts  quotes.ts  theme.ts  updater.ts  useHashRoute.ts  useSessions.ts  useStickToBottom.ts
web/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
web/src/: App.tsx  index.css
