[package]
name = "getmasters-proto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared wire DTOs and WebSocket envelopes for Masters — the single source of truth for the daemon's OpenAPI and the generated TypeScript client."

[dependencies]
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
uuid.workspace = true
